--- a/1.html
+++ b/1.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>My File</title>
 </head>
 <body>
     <h1>Hello Rajat beta</h1>
+    <h2> my people </h2>
 </body>
 </html>
