--- a/1.html
+++ b/1.html
@@ -6,7 +6,7 @@
     <title>My File</title>
 </head>
 <body>
-    <h1>Hello Rajat beta</h1>
+    <h1>Hello Raja beta</h1>
     <h2> my people </h2>
     <div>
         <h1>my hero</h1>
