--- a/1.html
+++ b/1.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My File</title>
+    <link rel="stylesheet" href="1.css">
 </head>
 <body>
     <h1>Hello Raja beta</h1>
     <h2> my people </h2>
-    <div>
+    <div class="a">
         <h1>my hero</h1>
     </div>
 </body>
