--- a/1.html
+++ b/1.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="1.css">
 </head>
 <body>
-    <h1>Hello Raja beta</h1>
+    <h1>Hello WORLD</h1>
     <h2> my people </h2>
     <div class="a">
         <h1>my hero</h1>
